// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Loader Container 1`] = `
<div
  style={
    Object {
      "background": "rgba(225, 232, 242, 1)",
      "width": "200px",
    }
  }
>
  <Loader
    page={false}
  >
    <div
      className="loader-align"
    >
      <div
        className="btn-loader"
      />
      <br />
      Loading... Please Wait
    </div>
  </Loader>
</div>
`;

exports[`Storyshots Loader Mobile 1`] = `
<Loader
  page={true}
>
  <div
    className="loader-align"
  >
    <div
      className="page-loader"
    />
    <br />
    Loading... Please Wait
  </div>
</Loader>
`;

exports[`Storyshots Loader Page 1`] = `
<Loader
  page={true}
>
  <div
    className="loader-align"
  >
    <div
      className="page-loader"
    />
    <br />
    Loading... Please Wait
  </div>
</Loader>
`;
